# Coco

./: .gitignore  AGENTS.md  Agent Orchestration & Swarm Protocol.md  AgentMesh.md  CLAUDE.md  Cargo.toml  Coco.md  DEVELOPMENT.md  README.md  WORKBENCH_STATE_FLOW.md  justfile  pyproject.toml
.agent/rules/: agentmesh.md  agents.md
.agentmesh/: project-status.md
.agentmesh/tasks/hello-world/: README.md  events.jsonl  task.yaml
.claude/: COLLABORATION.md
.claude/agents/: backend-developer.md  backend-director.md  frontend-developer.md  frontend-director.md  secretary.md
.codex/skills/gh-release-dmg/: SKILL.md
.feat/20260119-1514-sidebar-wt-branch/: context.md  delivery.md  disagreements.md  requirements.md
.feat/20260119-1725-ui-finished-working-overflow/: context.md  delivery.md  disagreements.md  requirements.md
.feat/20260120-0058-hide-turn-scrollbar/: context.md  delivery.md  disagreements.md  requirements.md
.feat/20260120-0148-rename-to-coco/: context.md  delivery.md  disagreements.md  requirements.md
.feat/20260120-0301-readme-official/: context.md  delivery.md  disagreements.md  requirements.md
.feat/20260120-0455-input-skill-column/: context.md  delivery.md  disagreements.md  requirements.md
.feat/20260120-1234-tui-message-refresh/: context.md  delivery.md  disagreements.md  requirements.md
.feat/20260120-1239-command-menu-density/: context.md  delivery.md  disagreements.md  requirements.md
.github/workflows/: ci.yml  release.yml
agents/architect/: agents.md
agents/backend/: agents.md
agents/db/: agents.md
agents/frontend/: agents.md
agents/log/: agents.md
agents/network/: agents.md
agents/qa/: agents.md
apps/gui/: .eslintrc.cjs  .prettierrc.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/gui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/gui/src-tauri/capabilities/: default.json
apps/gui/src-tauri/icons/: icon.icns
apps/gui/src-tauri/src/: codex_app_server.rs  codex_app_server_pool.rs  codex_patch_diff.rs  codex_rollout_restore.rs  lib.rs  thread_watch.rs
apps/gui/src/app/: App.tsx
crates/agentmesh-cli/: Cargo.toml
crates/agentmesh-cli/src/: main.rs
crates/agentmesh-codex/: Cargo.toml
crates/agentmesh-codex/src/: app_server_client.rs  exec_runner.rs  lib.rs
crates/agentmesh-core/: Cargo.toml
crates/agentmesh-core/src/: lib.rs  task.rs  task_store.rs
crates/agentmesh-orchestrator/: Cargo.toml
crates/agentmesh-orchestrator/src/: codex_app_server_adapter.rs  controller_loop.rs  lib.rs
crates/agentmesh-orchestrator/tests/: codex_app_server_adapter_test.rs  controller_loop_test.rs
crates/coco-cli/: Cargo.toml
crates/coco-cli/src/: main.rs
crates/coco-codex/: Cargo.toml
crates/coco-codex/src/: app_server_client.rs
crates/coco-core/: Cargo.toml
crates/coco-core/src/: task.rs  task_store.rs
crates/coco-orchestrator/: Cargo.toml
crates/coco-orchestrator/src/: codex_app_server_adapter.rs  controller_loop.rs  lib.rs
crates/coco-orchestrator/tests/: codex_app_server_adapter_test.rs  controller_loop_test.rs
docs/: README.md  note.md
docs/agentmesh/: README.md  artifacts.md  execution.md  gui.md  implementation.md  multiagent.md  release.md  roadmap.md  subagents.md
docs/agentmesh/adapters/: README.md  codex.md
docs/agentmesh/legacy/: README.md  agentmesh-vision-proposal.md  implementation-2026-01-19.md  multiagent-2026-01-19.md  roadmap-2026-01-19.md  root-readme-2026-01-19.md
docs/agentmesh/prompts/: README.md  codex-worker.md
docs/coco/: README.md  artifacts.md  execution.md  gui.md  implementation.md  release.md  roadmap.md  subagents.md
docs/coco/adapters/: codex.md
docs/coco/legacy/: README.md  coco-vision-proposal.md  implementation-2026-01-19.md  multiagent-2026-01-19.md  roadmap-2026-01-19.md  root-readme-2026-01-19.md
docs/coco/prompts/: codex-worker.md
docs/implementation-notes/: README.md
docs/implementation-notes/agentmesh/: README.md  workbench-state-flow.md
docs/implementation-notes/agentmesh-gui-codex-style/: README.md
docs/implementation-notes/coco/: README.md
docs/implementation-notes/coco-gui-codex-style/: README.md
docs/implementation-notes/codex-cli/: README.md  app-server-api.md  skills-implementation.md  slash-menu.md
docs/implementation-notes/codex-vscode-plugin/: README.md  auto-context.md  conversation-data-flow.md  conversation-folding-ui.md  diff-review-ui.md  inbox-remote-ui.md  tooling-cards-ui.md  workspace-tree-ui.md  worktree-init-ui.md
docs/references/: README.md
docs/references/A2A/: README.md
docs/references/agentclientprotocol/: README.md  introduction.md  llms.txt
docs/release-notes/: README.md  TEMPLATE.md
legacy/python/: README.md  pyproject.toml
openspec/: AGENTS.md  project.md
schemas/: evidence-entry.schema.json  orchestrator-actions.schema.json  task.schema.json  worker-output.schema.json
scripts/: bump-version.mjs  check-version.mjs  linkify-doc-refs.py
scripts/hooks/: install.sh  pre-commit  pre-push
scripts/release/: preflight.sh  propose_release.sh
templates/: APIContract.md  DiagnosticReport.md  JoinedSummary.md
(+277 files in other folders)
