[project]
name = "agentmesh"
version = "0.1.0"
description = "Multi-Agent Orchestration Framework"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "AgentMesh Team" }
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.uv.workspace]
members = [
    "packages/agentmesh-core",
    "packages/agentmesh-cli",
    "packages/agentmesh-orchestrator",
    "packages/agentmesh-codex",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "codex",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [
    "codex",
]
