[package]
name = "agentmesh-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentmesh"
path = "src/main.rs"

[dependencies]
agentmesh-core = { path = "../agentmesh-core" }
agentmesh-orchestrator = { path = "../agentmesh-orchestrator" }
clap = { version = "4.5.28", features = ["derive"] }
directories = "5.0.1"
serde_json = "1.0.138"
thiserror = "2.0.11"
