[package]
name = "agentmesh-codex"
version = "1.0.2"
edition = "2021"

[dependencies]
agentmesh-core = { path = "../agentmesh-core" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["process", "io-util", "rt", "macros", "sync", "fs"] }
