[package]
name = "agentmesh-core"
version = "1.0.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
thiserror = "2.0.11"
uuid = { version = "1.17.0", features = ["v4"] }
