[package]
name = "agentmesh-orchestrator"
version = "1.0.2"
edition = "2021"

[dependencies]
agentmesh-core = { path = "../agentmesh-core" }
chrono = { version = "0.4.42", features = ["serde"] }
libc = "0.2.169"
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["process", "rt", "macros", "sync"] }
