[package]
name = "coco-codex"
version = "1.2.1"
edition = "2021"

[dependencies]
coco-core = { path = "../coco-core" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["process", "io-util", "rt", "macros", "sync", "fs", "time"] }
