[package]
name = "coco-orchestrator"
version = "1.2.1"
edition = "2021"

[dependencies]
coco-codex = { path = "../coco-codex" }
coco-core = { path = "../coco-core" }
chrono = { version = "0.4.42", features = ["serde"] }
libc = "0.2.169"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["process", "rt", "macros", "sync"] }
