[package]
name = "coco-app"
version = "1.1.1"
description = "Coco (macOS)"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
# `tauri dev` uses `cargo run` and the Dock shows the running executable's name.
# Keep the package name `coco-app` (so workspace scripts can still `--exclude coco-app`),
# but run a binary named `coco` in dev + release.
autobins = false
default-run = "coco"

[[bin]]
name = "coco"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.5.0"
tokio = { version = "1.43.0", features = ["io-util", "macros", "process", "rt", "sync", "time"] }
coco-orchestrator = { path = "../../../crates/coco-orchestrator" }
coco-core = { path = "../../../crates/coco-core" }
